--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3.0",
+        "php": "^7.3.0 || ^8.0.0",
         "ext-exif": "*",
         "ext-gd": "*",
         "ext-json": "*",
